--- a/src/Resources/views/storefront/narrative/element/cms-element-product-listing.html.twig
+++ b/src/Resources/views/storefront/narrative/element/cms-element-product-listing.html.twig
@@ -26,6 +26,10 @@ uses a loop through Boxalino response blocks (block.blocks) to render the other 
         {% set sidebar = true %}
     {% endif %}
 
+    {% if disableEmptyFilter is not defined %}
+        {% set disableEmptyFilter = config('core.listing.disableEmptyFilterOptions') %}
+    {% endif %}
+
     {% set filterUrl = null %}
     {% set dataUrl = null %}
     {% set params = {} %}
@@ -51,20 +55,23 @@ uses a loop through Boxalino response blocks (block.blocks) to render the other 
         {% set currencySymbol = page.getCurrency() is defined ? page.getCurrency() : page.header.activeCurrency.translated.shortName %}
     {% endif %}
 
+    {% set listingPagination = {
+        sidebar: false,
+        params: params,
+        dataUrl: dataUrl,
+        filterUrl: filterUrl,
+        currency: currencySymbol,
+        disableEmptyFilter: disableEmptyFilter,
+        snippets: {
+            resetAllButtonText: 'listing.filterPanelResetAll'|trans|sw_sanitize
+        }
+    } %}
+
     {% block element_product_listing_wrapper %}
         <div class="cms-element-product-listing-wrapper  rtux-element-product-listing-wrapper"
              data-listing-pagination="true"
              data-listing="true"
-             data-listing-options='{
-                 "sidebar": "false",
-                 "params": {{ params|json_encode }},
-                 "dataUrl": "{{ dataUrl }}",
-                 "filterUrl": "{{ filterUrl }}",
-                 "currency": "{{ currencySymbol }}",
-                 "snippets": {
-                    "resetAllButtonText": "{{ 'listing.filterPanelResetAll'|trans|sw_sanitize }}"
-                 }
-             }'>
+             data-listing-options='{{ listingPagination|json_encode }}'>
 
             {% block element_product_listing_wrapper_content %}
                 <div class="cms-element-product-listing rtux-element-content-listing">
